crates/keron-lang/tests/corpus/errors/parse/reconcile_chain_missing_head.snap
---
source: crates/keron-lang/tests/harness/mod.rs
assertion_line: 75
---
error: found '>' expected something else, '#', '-', '"', '"true"', '"false"', '"null"', int, '[', '{', '"if"', '"for"', '"match"', identifier, or '('
  --> 2:12
  |
2 | reconcile -> a
  |            ^
